--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 *.class
 *.log
+*.cache
+/.idea/
+/.bsp/
+/target/
+/project/target/config-classes/
+/project/target/scala-2.12/
+/project/target/streams/
